Fix Role attribution during account creation